# DraconicEngine

./: .gitmodules  CMakeLists.txt  DONORS.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: linux_build.yml  windows_build.yml
Docs/: LoggingSinks.md
Engine/cpp/: CMakeLists.txt
Engine/cpp/Runtime/: CMakeLists.txt
Engine/cpp/Runtime/Core/: CMakeLists.txt  Core.cppm
Engine/cpp/Runtime/Core/Containers/: Array.cppm  Containers.cppm  Expected.cppm  Optional.cppm  Span.cppm
Engine/cpp/Runtime/Core/IO/: ImageLoader.cpp
Engine/cpp/Runtime/Core/Logging/: Logging.cpp  Logging.cppm  Logging.test.cpp
Engine/cpp/Runtime/Core/Math/: AABB.cppm  AABB.test.cpp  PackedTypes.bench.cpp  PackedTypes.cppm  Types.cppm
Engine/cpp/Runtime/Core/Memory/: BumpAllocator.test.cpp
Engine/cpp/Runtime/Platform/: Platform.cppm
Engine/cpp/Runtime/Shell/Desktop/: SDL3ShellFactory.cpp
Engine/cpp/Runtime/Shell/Null/: NullShellFactory.cpp
Engine/cpp/runtime/: CMakeLists.txt
Engine/cpp/runtime/core/: CMakeLists.txt
Engine/cpp/runtime/scene/: CMakeLists.txt
Engine/cpp/runtime/scene/camera/: camera_controller.cpp
Samples/cpp/: CMakeLists.txt  rendering.cpp
Samples/cpp/Render/: CMakeLists.txt
cmake/: Compiler.cmake  Modules.cmake  Shaders.cmake
engine/: CMakeLists.txt
engine/core/: core.cppm
engine/core/definitions/: stdtypes.cppm
engine/core/io/: image_loader.cpp
engine/core/math/: transform.cpp  transform.cppm
engine/core/memory/: handle.cppm  slot_array.cppm
engine/input/: input.cpp
engine/native/: CMakeLists.txt
engine/native/core/: CMakeLists.txt
engine/native/core/io/: filesystem.cpp  filesystem.cppm  image_loader.cpp  image_loader.cppm
engine/native/core/math/: constants.cppm  functions.cppm  math.cppm  math.test.cpp  transform.cpp  transform.cppm  types_common.cppm  vector2.cppm  vector3.cppm  vector4.cppm
engine/native/core/memory/: allocator.cpp  allocator.cppm  bumpAllocator.cpp  bumpAllocator.cppm  bumpAllocator.test.cpp  fixedAllocator.cpp  fixedAllocator.cppm  fixedAllocator.test.cpp  pageAllocator.cpp  pageAllocator.cppm  slot_array.cppm  trackingAllocator.cpp  trackingAllocator.cppm  trackingAllocator.test.cpp
engine/native/input/: CMakeLists.txt  input.cpp  input.cppm
engine/native/main/: main.cpp
engine/native/platform/: CMakeLists.txt  platform.cppm
engine/native/platform/impl/: CMakeLists.txt  platform_impl.h
engine/native/platform/linux/: linux.cpp
engine/native/platform/mac/: mac.mm
engine/native/platform/win32/: win32.cpp
engine/native/rendering/: CMakeLists.txt
engine/native/rendering/material/: material.cppm
engine/native/rendering/mesh/: mesh.cpp  mesh.cppm
engine/native/rendering/quad_renderer/: quad_renderer.cpp  quad_renderer.cppm
engine/native/rendering/renderer/: renderer.cpp  renderer.cppm
engine/native/rendering/rendergraph/: rendergraph.cpp  rendergraph.cppm
engine/native/rendering/rhi/: CMakeLists.txt  core.cpp  rhi.cppm  rhi_bgfx.cpp  texture.cpp  uniform_registry.cppm  vertex.cppm
engine/native/rendering/shaders/: fs.sc  varying.def.sc  vs.sc
engine/native/scene/: CMakeLists.txt  scene.cppm
engine/native/scene/camera/: camera_controller.cpp  camera_controller.cppm
engine/native/scene/renderable/: renderable.cppm
engine/native/scene/transform/: transform.cpp  transform.cppm
engine/platform/impl/linux/: linux.cpp
engine/platform/impl/mac/: mac.mm
engine/platform/impl/win32/: win32.cpp
engine/runtime/: CMakeLists.txt  draconic.cppm
engine/runtime/main/: main.cpp
engine/runtime/rendering/: CMakeLists.txt  rendering.cppm
engine/runtime/rendering/dmesh/: dmesh_runtime.cpp  dmesh_runtime.cppm  meshlet_buffers.cppm
engine/runtime/rendering/mesh/: mesh.cppm
engine/runtime/rendering/quad_renderer/: quad_renderer.cpp  quad_renderer.cppm
engine/runtime/rendering/render_mesh/: mesh.cpp  mesh.cppm
engine/runtime/rendering/renderer/: renderer.cpp  renderer.cppm
engine/runtime/rendering/rhi/: buffers.cpp  commands.cpp  pipelines.cpp  rhi.cppm
engine/runtime/rendering/shaders/: fs_blit.sc  vs_blit.sc
engine/runtime/scene/: CMakeLists.txt
engine/runtime/scene/camera/: camera_controller.cpp  camera_controller.cppm
engine/runtime/scene/transform_component/: transform_component.cpp  transform_component.cppm
engine/tools/: CMakeLists.txt  tools.cppm
engine/tools/asset_pipeline/: CMakeLists.txt  asset_pipeline.cppm
engine/tools/asset_pipeline/formats/: dmesh_format.cppm
engine/tools/asset_pipeline/geometry/: mesh_sanitizer.cpp  mesh_sanitizer.cppm
engine/tools/asset_pipeline/importers/: importer.cppm  obj_importer.cpp  obj_importer.cppm
engine/tools/asset_pipeline/mesh/: mesh_cooker.cpp  mesh_cooker.cppm  mesh_pipeline.cpp  mesh_pipeline.cppm
engine/tools/asset_pipeline/meshlets/: meshlet_builder.cpp  meshlet_builder.cppm  meshlets_types.cppm
engine/tools/asset_pipeline/optimize/: adjacency_builder.cpp  adjacency_builder.cppm  mesh_optimizer.cpp  mesh_optimizer.cppm
engine/tools/asset_pipeline/surface/: tangent_generator.cpp  tangent_generator.cppm
engine/tools/asset_pipeline/types/: mesh_types.cppm
