add_modules_library(rhi)
add_modules_library(rendergraph)
add_modules_library(renderer)
add_modules_library(render_mesh)
add_modules_library(material)
add_modules_library(quad_renderer)
add_modules_library(dmesh)

target_link_libraries(rhi PUBLIC core math memory platform bgfx bx)
target_link_libraries(rendergraph PUBLIC rhi bx)
target_link_libraries(render_mesh PUBLIC memory rhi math core)
target_link_libraries(material PUBLIC rhi)
target_link_libraries(quad_renderer PUBLIC rhi rendergraph bgfx bx)
target_link_libraries(renderer PUBLIC core math rhi rendergraph render_mesh quad_renderer material bgfx bx)
target_link_libraries(dmesh PUBLIC core tools rhi render_mesh)