add_modules_library(types STATIC)
add_modules_library(formats STATIC)
add_modules_library(geometry STATIC)
add_modules_library(importers STATIC)
add_modules_library(mesh STATIC)
add_modules_library(meshlets STATIC)
add_modules_library(optimize STATIC)
add_modules_library(surface STATIC)

target_link_libraries(types PUBLIC core)
target_link_libraries(formats PUBLIC core)
target_link_libraries(geometry PUBLIC core types)
target_link_libraries(importers PUBLIC core types tinyobjloader)
target_link_libraries(mesh PUBLIC core types importers formats geometry surface optimize meshlets)
target_link_libraries(meshlets PUBLIC core types meshoptimizer)
target_link_libraries(optimize PUBLIC core types meshoptimizer)
target_link_libraries(surface PUBLIC core types mikktspace)

target_include_directories(importers PRIVATE ${CMAKE_SOURCE_DIR}/engine/thirdparty/tinyobjloader)
target_include_directories(meshlets PRIVATE ${CMAKE_SOURCE_DIR}/engine/thirdparty/meshoptimizer/src)
target_include_directories(optimize PRIVATE ${CMAKE_SOURCE_DIR}/engine/thirdparty/meshoptimizer/src)
target_include_directories(surface PRIVATE ${CMAKE_SOURCE_DIR}/engine/thirdparty/MikkTSpace)